--- a/XellissimeTravel/Storyboard/Base.lproj/Main.storyboard
+++ b/XellissimeTravel/Storyboard/Base.lproj/Main.storyboard
@@ -54,6 +54,8 @@
                         <segue destination="6GE-se-kze" kind="relationship" relationship="viewControllers" id="Px0-2v-Wdh"/>
                         <segue destination="DzT-4n-Qpk" kind="relationship" relationship="viewControllers" id="GuR-UB-iZM"/>
                         <segue destination="5XS-js-K14" kind="relationship" relationship="viewControllers" id="mSB-FX-4u2"/>
+                        <segue destination="mUC-8O-xf3" kind="relationship" relationship="viewControllers" id="RI3-Wf-kCd"/>
+                        <segue destination="LZ1-Nn-jnu" kind="relationship" relationship="viewControllers" id="bLe-BL-CPR"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TUt-lf-0Ct" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -68,7 +70,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gVQ-6i-zNp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1582" y="74"/>
+            <point key="canvasLocation" x="1112" y="468"/>
+        </scene>
+        <!--Photos-->
+        <scene sceneID="wlp-E1-iHY">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Photos" id="mUC-8O-xf3" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Photos" image="camerablue" id="VKG-qZ-45D"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NFt-rm-2Kq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1370" y="457"/>
         </scene>
         <!--Weather-->
         <scene sceneID="Csa-6G-u7P">
@@ -78,7 +90,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VKh-CM-bLV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1502" y="196"/>
+            <point key="canvasLocation" x="850" y="470"/>
         </scene>
         <!--Translate-->
         <scene sceneID="LRb-i1-G8y">
@@ -88,13 +100,25 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VVY-YR-n70" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1551" y="273"/>
+            <point key="canvasLocation" x="318" y="473"/>
+        </scene>
+        <!--Parameters-->
+        <scene sceneID="crv-Pz-qUY">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Parameters" id="LZ1-Nn-jnu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Parameters" image="settingsblue" id="fxf-99-L5K"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q0P-Jm-ofk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-28" y="472"/>
         </scene>
     </scenes>
     <resources>
         <image name="MountainGif" width="3570" height="4462"/>
+        <image name="camerablue" width="24" height="20"/>
         <image name="dollarblue" width="30" height="30"/>
         <image name="google-translate-icon" width="30" height="30"/>
+        <image name="settingsblue" width="26" height="26"/>
         <image name="weather" width="30" height="30"/>
     </resources>
 </document>
